--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
 			<version>4.0</version>
 		</dependency>
 
+		<!--for PostgreSQL-->
+		<dependency>
+		<groupId>org.postgresql</groupId>
+		<artifactId>postgresql</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
