两个DB源测试1

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,15 +13,20 @@ mybatis:
 ## SqlServer
 spring:
     datasource:
-      hikari:
+      zk:
         jdbc-url: jdbc:sqlserver://localhost:1433;database=zktime606_ID
         driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
         username: sa
         password: SS.9erver
       hk:
-        jdbc-url: jdbc:postgresql://localhost:7017/acs_acsdb
-        driver-class-name: org.postgresql.Driver
-        username: postgres
-        password: PostG.9re
+        jdbc-url: jdbc:sqlserver://localhost:1433;database=zktime606_ID
+        driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
+        username: sa
+        password: SS.9erver
+#      hk:
+#        jdbc-url: jdbc:postgresql://localhost:7017/acs_acsdb
+#        driver-class-name: org.postgresql.Driver
+#        username: postgres
+#        password: PostG.9re
 
 
