--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,7 +29,7 @@ spring:
         testOnReturn: false
         testWhileIdle: true
         timeBetweenEvictionRunsMillis: 60000
-        url: jdbc:sqlserver://localhost:1433;database=zktime606_ID
+        url: jdbc:sqlserver://192.168.1.6:1433;database=zktime606_ID
         username: sa
         validationQuery: select 'x'
       hk:
