--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
 	</parent>
 	<groupId>cc.a-u</groupId>
 	<artifactId>hkzk</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<version>1.0</version>
+	<packaging>jar</packaging>
 	<name>hkzk</name>
 	<description>hikvision and zkteco</description>
 	<properties>
