--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -26,7 +26,7 @@ spring:
         testOnReturn: false
         testWhileIdle: true
         timeBetweenEvictionRunsMillis: 60000
-        url: jdbc:sqlserver://192.168.1.6:1433;database=zktime606_ID
+        url: jdbc:sqlserver://192.168.1.6:1433;database=zktime606_ID #test
         username: sa
         validationQuery: select 'x'
       hk:
