HK到ZK数据逻辑写完。配置上传 test3

--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,6 @@ build/
 ### VS Code ###
 .vscode/
 
-src/main/resources/application-prod.yml
+/src/main/resources/application-prod.yml
+application-prod.yml
+*-prod.yml
